--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<h3> {{title}}</h3>
-<hr />
-<app-counter></app-counter>
+<!-- <h3> {{title}}</h3> -->
+<!-- <hr /> -->
+<!-- <app-counter></app-counter> -->
 
-<app-heroes-hero />
-<app-heroes-list />
+<!-- <app-heroes-hero /> -->
+<!-- <app-heroes-list /> -->
+<app-dbz-main-page></app-dbz-main-page>
